# non_default_constructible

./: CMakeLists.txt  README.md  test_fail_1.cpp
include/: non_default_constructible.h
tests/: test.cpp
